--- a/YouTubeDeepDarkClassic.user.css
+++ b/YouTubeDeepDarkClassic.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
-@name YouTube DeepDark
+@name YouTube DeepDark Classic
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
 @version 2.2.3
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkClassic.user.css
-@description YouTube dark theme
+@description YouTube dark theme for the Classic YouTube
 @author RaitaroH
 @license GNU-V3.0
 
