--- a/YouTubeDeepDarkClassic.user.css
+++ b/YouTubeDeepDarkClassic.user.css
@@ -4,7 +4,7 @@
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
 @version 2.2.7
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkClassic.user.css
-@description YouTube dark theme for the Classic YouTube
+@description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme) 
 @author RaitaroH
 @license GNU-V3.0
 
