--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -4,7 +4,7 @@
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
 @version 2.5.9
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
-@description YouTube dark theme for the Material version of YouTube (2017)
+@description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
 @license GNU-V3.0
 
